Fixed database delay.